Ifc/src/org/bimserver/ifc/file/reader/generated/Part21ParserToEmf.java
/* Generated By:JavaCC: Do not edit this line. Part21ParserToEmf.java */
package org.bimserver.ifc.file.reader.generated;

import java.util.ArrayList;

import org.bimserver.ifc.file.reader.EObjectMapParser;
import org.bimserver.ifc.file.reader.IfcListPair;
import org.bimserver.ifc.file.reader.IfcOmittedPair;
import org.bimserver.ifc.file.reader.IfcPair;
import org.bimserver.ifc.file.reader.IfcReaderException;
import org.bimserver.ifc.file.reader.IfcSimplePair;

@SuppressWarnings(value={"all"})
public class Part21ParserToEmf implements Part21ParserToEmfConstants {

        private ArrayList<IfcPair> currentRecord = new ArrayList<IfcPair>();
        private String entityName;

        private EObjectMapParser parsingHelper;

        public void init(EObjectMapParser parsingHelper){
                this.parsingHelper = parsingHelper;
        }

/************************************************
* Grammar
***********************************************/
  final public void exchange_file() throws ParseException {
    jj_consume_token(50);
    header_section();
    data_section();
    jj_consume_token(51);
  }

  final public void header_section() throws ParseException {
    jj_consume_token(52);
    header_entity();
    header_entity();
    header_entity();
    if (jj_2_1(3)) {
      header_entity_list();
    } else {
      ;
    }
    jj_consume_token(53);
  }

  final public void header_entity_list() throws ParseException {
    header_entity();
    label_1:
    while (true) {
      if (jj_2_2(3)) {
        ;
      } else {
        break label_1;
      }
      header_entity();
    }
  }

  final public void header_entity() throws ParseException {
                        Token name=null;
    name = jj_consume_token(KEYWORD);
    jj_consume_token(LPAREN);
    if (jj_2_3(3)) {
      parameter_list();
    } else {
      ;
    }

    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
  }

  final public void parameter_list() throws ParseException {
    parameter();
    label_2:
    while (true) {
      if (jj_2_4(3)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(COMMA);
      parameter();
    }
  }

  final public void parameter() throws ParseException {
    if (jj_2_5(3)) {
      typed_parameter();
    } else if (jj_2_6(3)) {
      untyped_parameter();
    } else if (jj_2_7(3)) {
      omitted_parameter();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void typed_parameter() throws ParseException {
  Token t = null;
  IfcListPair pair = new IfcListPair();
  ArrayList<IfcPair> park_current = (ArrayList<IfcPair>)currentRecord.clone();
  currentRecord.clear();
    t = jj_consume_token(KEYWORD);
    jj_consume_token(LPAREN);
    parameter();
    jj_consume_token(RPAREN);
  pair.setName(t.image);
  pair.setList((ArrayList<IfcPair>)currentRecord.clone());
  park_current.add(pair);
  currentRecord = (ArrayList<IfcPair>)park_current.clone();
  }

  final public void untyped_parameter() throws ParseException {
 Token t = null;
 IfcSimplePair pair = new IfcSimplePair();
    if (jj_2_8(3)) {
      t = jj_consume_token(DOLLAR);
           if (t!=null) {
                    pair.setType(IfcSimplePair.Type.DOLLAR);
                        pair.setName(t.image);
                        currentRecord.add(pair);
           }
    } else if (jj_2_9(3)) {
      t = jj_consume_token(INTEGER);
           if (t!=null) {
                        pair.setType(IfcSimplePair.Type.INTEGER);
                        pair.setName(t.image);
                        currentRecord.add(pair);
           }
    } else if (jj_2_10(3)) {
      t = jj_consume_token(REAL);
           if (t!=null) {
                        pair.setType(IfcSimplePair.Type.REAL);
                        pair.setName(t.image);
                        currentRecord.add(pair);
           }
    } else if (jj_2_11(3)) {
      t = jj_consume_token(STRING);
           if (t!=null) {
                        pair.setType(IfcSimplePair.Type.STRING);
                        pair.setName(t.image);
                        currentRecord.add(pair);
           }
    } else if (jj_2_12(3)) {
      t = jj_consume_token(ENTITY_INSTANCE_NAME);
           if (t!=null) {
                        pair.setType(IfcSimplePair.Type.ENTITY_INSTANCE_NAME);
                        pair.setName(t.image);
                        currentRecord.add(pair);
           }
    } else if (jj_2_13(3)) {
      t = jj_consume_token(ENUMERATION);
           if (t!=null) {
                        pair.setType(IfcSimplePair.Type.ENUMERATION);
                        pair.setName(t.image);
                        currentRecord.add(pair);
           }
    } else if (jj_2_14(3)) {
      t = jj_consume_token(BINARY);
           if (t!=null) {
                        pair.setType(IfcSimplePair.Type.BINARY);
                        pair.setName(t.image);
                        currentRecord.add(pair);
           }
    } else if (jj_2_15(3)) {
      list();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void omitted_parameter() throws ParseException {
 Token t = null;
 IfcOmittedPair pair = new IfcOmittedPair();
    t = jj_consume_token(STAR);
   if (t!=null) {
    pair.setName(t.image);
    currentRecord.add(pair);
  }
  }

  final public void list() throws ParseException {
 ArrayList<IfcListPair> park_current = (ArrayList<IfcListPair>)currentRecord.clone();
 currentRecord.clear();
    jj_consume_token(LPAREN);
    label_3:
    while (true) {
      if (jj_2_16(3)) {
        ;
      } else {
        break label_3;
      }
      parameter();
      label_4:
      while (true) {
        if (jj_2_17(3)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(COMMA);
        parameter();
      }
    }
    jj_consume_token(RPAREN);
        park_current.add(new IfcListPair((ArrayList<IfcPair>)currentRecord.clone()));
        currentRecord = (ArrayList<IfcPair>)park_current.clone();
  }

  final public void data_section() throws ParseException {
    jj_consume_token(54);
    entity_instance_list();
    jj_consume_token(53);
  }

  final public void entity_instance_list() throws ParseException {
    entity_instance();
    label_5:
    while (true) {
      if (jj_2_18(3)) {
        ;
      } else {
        break label_5;
      }
      entity_instance();
    }
  }

  final public void entity_instance() throws ParseException {
    if (jj_2_19(3)) {
      simple_entity_instance();
    } else if (jj_2_20(3)) {
      complex_entity_instance();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void simple_entity_instance() throws ParseException {
                                 Token name=null;
    name = jj_consume_token(ENTITY_INSTANCE_NAME);
    jj_consume_token(EQ);
    if (jj_2_21(3)) {
      scope();
    } else {
      ;
    }
    simple_record();
    jj_consume_token(SEMICOLON);
  try {
   parsingHelper.parse(new Long(name.image.substring(1, name.image.length())), currentRecord, entityName);
  } catch (IfcReaderException e) {
   {if (true) throw new RuntimeException(e);}
  }
  }

  final public void complex_entity_instance() throws ParseException {
 Token t=null;
    jj_consume_token(ENTITY_INSTANCE_NAME);
    jj_consume_token(EQ);
    if (jj_2_22(3)) {
      scope();
    } else {
      ;
    }
    subsuper_record();
    jj_consume_token(SEMICOLON);

  }

  final public void scope() throws ParseException {
    jj_consume_token(55);
    entity_instance_list();
    jj_consume_token(56);
    if (jj_2_23(3)) {
      export_list();
    } else {
      ;
    }
  }

  final public void export_list() throws ParseException {
    jj_consume_token(SLASH);
    jj_consume_token(ENTITY_INSTANCE_NAME);
    label_6:
    while (true) {
      if (jj_2_24(3)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(COMMA);
      jj_consume_token(ENTITY_INSTANCE_NAME);
    }
    jj_consume_token(SLASH);
  }

  final public void simple_record() throws ParseException {
                        Token record=null;
  currentRecord = new ArrayList();
    record = jj_consume_token(KEYWORD);

    jj_consume_token(LPAREN);
    if (jj_2_25(3)) {
      parameter_list();
    } else {
      ;
    }
    jj_consume_token(RPAREN);
        entityName = record.image;
  }

  final public void subsuper_record() throws ParseException {
    jj_consume_token(LPAREN);
    simple_record_list();
    jj_consume_token(RPAREN);
  }

  final public void simple_record_list() throws ParseException {
    simple_record();
    label_7:
    while (true) {
      if (jj_2_26(3)) {
        ;
      } else {
        break label_7;
      }
      simple_record();
    }

  }

  final public void syntax() throws ParseException {
    exchange_file();
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_3R_23() {
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3_16() {
    if (jj_3R_11()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_17()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_15() {
    if (jj_scan_token(LPAREN)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_16()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  private boolean jj_3R_12() {
    if (jj_scan_token(KEYWORD)) return true;
    if (jj_scan_token(LPAREN)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3_26() {
    if (jj_3R_21()) return true;
    return false;
  }

  private boolean jj_3_7() {
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3_6() {
    if (jj_3R_13()) return true;
    return false;
  }

  private boolean jj_3_4() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3_23() {
    if (jj_3R_20()) return true;
    return false;
  }

  private boolean jj_3_5() {
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) return true;
    }
    }
    return false;
  }

  private boolean jj_3_24() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_scan_token(ENTITY_INSTANCE_NAME)) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3R_14() {
    if (jj_scan_token(STAR)) return true;
    return false;
  }

  private boolean jj_3R_10() {
    if (jj_3R_11()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_4()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3_25() {
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3_15() {
    if (jj_3R_15()) return true;
    return false;
  }

  private boolean jj_3R_22() {
    if (jj_scan_token(LPAREN)) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3_22() {
    if (jj_3R_19()) return true;
    return false;
  }

  private boolean jj_3R_9() {
    if (jj_scan_token(KEYWORD)) return true;
    if (jj_scan_token(LPAREN)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_3()) jj_scanpos = xsp;
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  private boolean jj_3_14() {
    if (jj_scan_token(BINARY)) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_8()) return true;
    return false;
  }

  private boolean jj_3R_8() {
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3_21() {
    if (jj_3R_19()) return true;
    return false;
  }

  private boolean jj_3R_21() {
    if (jj_scan_token(KEYWORD)) return true;
    if (jj_scan_token(LPAREN)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_25()) jj_scanpos = xsp;
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  private boolean jj_3_13() {
    if (jj_scan_token(ENUMERATION)) return true;
    return false;
  }

  private boolean jj_3R_20() {
    if (jj_scan_token(SLASH)) return true;
    if (jj_scan_token(ENTITY_INSTANCE_NAME)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_24()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(SLASH)) return true;
    return false;
  }

  private boolean jj_3_12() {
    if (jj_scan_token(ENTITY_INSTANCE_NAME)) return true;
    return false;
  }

  private boolean jj_3R_19() {
    if (jj_scan_token(55)) return true;
    if (jj_3R_23()) return true;
    return false;
  }

  private boolean jj_3_20() {
    if (jj_3R_18()) return true;
    return false;
  }

  private boolean jj_3_11() {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  private boolean jj_3R_18() {
    if (jj_scan_token(ENTITY_INSTANCE_NAME)) return true;
    if (jj_scan_token(EQ)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_22()) jj_scanpos = xsp;
    if (jj_3R_22()) return true;
    return false;
  }

  private boolean jj_3_18() {
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3_10() {
    if (jj_scan_token(REAL)) return true;
    return false;
  }

  private boolean jj_3R_17() {
    if (jj_scan_token(ENTITY_INSTANCE_NAME)) return true;
    if (jj_scan_token(EQ)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_21()) jj_scanpos = xsp;
    if (jj_3R_21()) return true;
    return false;
  }

  private boolean jj_3_9() {
    if (jj_scan_token(INTEGER)) return true;
    return false;
  }

  private boolean jj_3_17() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3_19() {
    if (jj_3R_17()) return true;
    return false;
  }

  private boolean jj_3R_16() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_19()) {
    jj_scanpos = xsp;
    if (jj_3_20()) return true;
    }
    return false;
  }

  private boolean jj_3_8() {
    if (jj_scan_token(DOLLAR)) return true;
    return false;
  }

  private boolean jj_3R_13() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3_9()) {
    jj_scanpos = xsp;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3_11()) {
    jj_scanpos = xsp;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3_13()) {
    jj_scanpos = xsp;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3_15()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  /** Generated Token Manager. */
  public Part21ParserToEmfTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[26];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public Part21ParserToEmf(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Part21ParserToEmf(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new Part21ParserToEmfTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
